# nucleo-h723zg-postcard-rpc

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
firmware/: Cargo.toml  build.rs
firmware/src/: main.rs
icd/: Cargo.toml
icd/src/: lib.rs
software/: Cargo.toml
software/src/: client.rs  lib.rs
