[package]
name = "software-host"
version = "0.1.0"
edition = "2021"

[dependencies.icd]
path = "../icd"
features = ["use-std"]

[dependencies.postcard-rpc]
version = "0.11"
features = [
    "use-std",
    "raw-nusb",
]

[dependencies.postcard-schema]
version = "0.2.1"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]
